# document-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/boundary_detection/: __init__.py  passthrough.py
app/classification/: __init__.py  heuristics.py  service.py
app/config/: settings.py
app/embeddings/: __init__.py
app/extraction/: __init__.py  extractors.py  invoice_layout.py  service.py
app/ingestion/: __init__.py  router.py  service.py
app/ocr/: __init__.py  base.py  paddle.py  service.py
app/output/: __init__.py  service.py
app/pipeline/: __init__.py  runner.py
app/preprocessing/: __init__.py  detector.py  docx.py  image.py  pdf.py  service.py
app/queue/: __init__.py  client.py  constants.py
app/schemas/: __init__.py  enums.py  extraction.py  job.py  ocr.py  output.py  page.py  segment.py  validation.py
app/storage/: __init__.py  base.py  local.py  service.py
app/utils/: __init__.py  exceptions.py  logging.py
app/validation/: __init__.py  service.py
app/workers/: __init__.py  cli.py  settings.py
pr-review-sample/: color_palette_demo.py
tests/: __init__.py  test_pipeline_units.py  test_preprocessing.py
web/: .env.example  index.html
web/src/: App.css  App.tsx  index.css  types.ts
web/src/api/: client.ts
web/src/components/: JobList.tsx  ResultViewer.tsx  UploadZone.tsx
